--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
     "framer-motion": "^11.18.0",
     "lucide-react": "^0.471.1",
     "motion": "^11.18.1",
-    "next": "15.1.4",
+    "next": "^13.2.0",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react": "^18.0.0",  
+    "react-day-picker": "^8.10.1",  
+    "react-dom": "^18.0.0",  
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.0.0", 
+    "@types/react-dom": "^18.0.0", 
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
