--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": " prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
+   
+
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
