--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "build": " prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
-   
-
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
@@ -24,6 +22,7 @@
     "date-fns": "^3.6.0",
     "dotted-map": "^2.2.3",
     "framer-motion": "^11.18.1",
+    "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.471.1",
     "motion": "^11.18.1",
