--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.471.1",
+    "mongodb": "^6.12.0",
     "motion": "^11.18.1",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
