--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "@tabler/icons-react": "^3.28.1",
+    "@types/js-cookie": "^3.0.6",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -25,6 +26,7 @@
     "dotted-map": "^2.2.3",
     "framer-motion": "^11.18.1",
     "jose": "^5.9.6",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.471.1",
     "mongodb": "^6.12.0",
